[package]
name = "openh264-sys"
version = "1.0.0"
authors = ["Isamu Mogi"]
build = "build.rs"
description = "Bindings to openh264"
license = "BSD-2-Clause"
readme = "README.md"
repository = "https://github.com/saturday06/rust-openh264"

[features]
# Download and build openh264 source
build = []

# Use static library
static = []

[dependencies]

[build-dependencies]
bindgen = "0.32.2"
cc = "1.0.4"
reqwest = "0.8.3"
libflate = "0.1"
tar = "0.4"
glob = "0.2.11"
pkg-config = "0.3.9"
url = "1.6.0"
bzip2 = "0.3.2"

[badges]
travis-ci = { repository = "saturday06/rust-openh264" }
appveyor = { repository = "saturday06/rust-openh264" }
